tests/partial-sigs/should_compile/PatBind.hs
{-# LANGUAGE PartialTypeSignatures #-}
module PatBind where

foo :: _
Just foo = Just id
