tests/partial-sigs/should_fail/UnnamedConstraintWildcard2.hs
{-# LANGUAGE PartialTypeSignatures #-}
module UnnamedConstraintWildcard2 where

foo :: _ a => a -> String
foo x = show x
